my-apps/media/garage-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-webui
  labels:
    app.kubernetes.io/name: garage-webui
spec:
  type: ClusterIP
  ports:
    - port: 3909
      targetPort: 3909
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: garage-webui
